@@ -1,5 +1,17 @@
 2001-03-20  Bruno Haible  <haible@clisp.cons.org>
 
+	* configure: Add trailing slash to www.lisp.org URL.
+	* cfgacorn.lisp (*clhs-root-default*): Likewise.
+	* cfgamiga.lisp (*clhs-root-default*): Likewise.
+	* cfgdos.lisp (*clhs-root-default*): Likewise.
+	* cfgwin32.lisp (*clhs-root-default*): Likewise.
+	* makemake.in (HSDEFAULT): Likewise.
+	(hyperspec): Check existence of directory if it's an absolute
+	directory. Remove trailing slash afterwards.
+	* clhs.lisp (clhs): Accept a clhs-root with or without trailing slash.
+
+2001-03-20  Bruno Haible  <haible@clisp.cons.org>
+
 	* compiler.lisp (compile-file-pathname-helper): Rewritten. Obey
 	output-file's directory even if it is a relative directory.
 
